Fix [Models] Class argument columns unaligned (#873)

--- a/src/elements/ProjectSettingsGeneral/projectSettingsGeneral.scss
+++ b/src/elements/ProjectSettingsGeneral/projectSettingsGeneral.scss
@@ -6,12 +6,6 @@
   }
 
   &__params {
-    .table-cell__actions {
-      display: flex;
-      justify-content: flex-end;
-      min-width: 70px;
-    }
-
     .table-row__header {
       border-top: 0;
     }
